--- a/2022-1/apunte/Cap.04.tex
+++ b/2022-1/apunte/Cap.04.tex
@@ -563,7 +563,7 @@ Operativamente es útil el siguiente resultado.
     \end{equation*}
     \begin{enumex}
         \item Probar que $\Z_m$ es un  \textit{anillo conmutativo con unidad},  es decir se cumplen los axiomas \textbf{I1},\ldots,\textbf{I6} de la sección \ref{seccion-aritmetica} (cambiando $\Z$ por  $\Z_m$). 
-        \item\label{item-zp-cuerpo} Probar que si $p$ es un número primo,  entonces $\Z_p$ es \textit{cuerpo}, es decir  se cumplen los axiomas \textbf{I1},\ldots,\textbf{I6} de la sección \ref{seccion-aritmetica} y además, para todo $a \in \Z_p$, $a\ne 0$, existe un único $b \in \Z_p$ tal que $ab =1$. 
+        \item\label{item-zp-cuerpo} Probar que si $p$ es un número primo,  entonces $\Z_p$ es \textit{cuerpo}, es decir  se cumplen los axiomas \textbf{I1},\ldots,\textbf{I6} de la sección \ref{seccion-aritmetica} y además, para todo $a \in \Z_p$, $a\ne 0$, existe un único $b \in \Z_p$ tal que $ab =1$ [Ayuda: usar la ecuación lineal de congruencia]. 
     \end{enumex}
 
     \item  Sea $p$ número entero positivo.
@@ -612,7 +612,7 @@ Por \ref{it.lemafermat_a} es claro que $ \binom{p}{i} a^ib^{p-i}\equiv 0 \pmod{p
 si $0<i<p$. Luego se deduce el resultado.
 \end{proof}
 
-El siguiente es el llamado teorema de Fermat.
+El siguiente es el llamado teorema de Fermat o teorema pequeño de Fermat.
 
 \begin{teorema}\label{t4.3} Sea $p$ un número primo y $a$ número
 entero. Entonces
