Actualización cap 5 (menores)

--- a/2022-1/apunte/Cap.05.tex
+++ b/2022-1/apunte/Cap.05.tex
@@ -714,7 +714,7 @@ La idea clave del algoritmo de Hierholzer  es la siguiente.
 \begin{proof} \ref{item:hierholzer_a}
     Observar que no es posible quedarse atascado en ningún vértice que no sea  el vértice original, porque el grado par de todos los vértices garantiza que, cuando se ingresa a un vértice distinto al original debe haber una  arista sin usar que nos permite dejarlo. 
 
-    \ref{item:hierholzer_b} Saliendo del vértice original,  cada vez que ingresamos a un vértice de valencia par tenemos aristas sin usar y salimos por alguna de ellas. Por lo tanto, no es posible quedarse atascado en ningún vértice que sea par y el recorrido maximal debe terminar en un vértice impar. Pero no puede terminar en el vértice original, pues si terminara ahí el vértice sería par. Todo esto implica que el recorrido maximal termina en el vértice impar que no es el origen. 
+    \ref{item:hierholzer_b} Saliendo del vértice original, y razonando en forma análoga a  \ref{item:hierholzer_a}, podemos ver fácilmente que el recorrido maximal termina en el vértice impar que no es el origen. 
 \end{proof}
 
 
