--- a/2022-1/beamer/C20_md1.tex
+++ b/2022-1/beamer/C20_md1.tex
@@ -1,6 +1,6 @@
-\documentclass[handout]{beamer} % sin pausas
-%\documentclass{beamer} % con pausas
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} % con pausas
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usetheme{CambridgeUS}
 
@@ -83,7 +83,7 @@
 
 \nc{\ba}{\mathbf{a}} \nc{\bb}{\mathbf{b}} \nc{\bt}{\mathbf{t}}
 \nc{\bB}{\mathbf{B}}
-
+ 
 \nc{\cP}{\mathcal{P}} \nc{\cU}{\mathcal{U}} \nc{\cX}{\mathcal{X}}
 \nc{\cE}{\mathcal{E}} \nc{\cS}{\mathcal{S}} \nc{\cA}{\mathcal{A}}
 \nc{\cC}{\mathcal{C}} \nc{\cO}{\mathcal{O}} \nc{\cQ}{\mathcal{Q}}
@@ -96,7 +96,7 @@
 
 
 
-\title[Clase 20 - Caminatas, caminos y ciclos]{Matemática Discreta I \\ Clase 20 - Caminatas, caminos y ciclos}
+\title[Clase 20 - Isomorfismo / Caminatas, caminos y ciclos]{Matemática Discreta I \\ Clase 20 -  Isomorfismo / Caminatas, caminos y ciclos}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
